--- a/app/src/main/res/layout/activity_videomonitoring.xml
+++ b/app/src/main/res/layout/activity_videomonitoring.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:screenOrientation="portrait"
     tools:context=".VideoMonitoring">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintlayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
             android:layout_height="220dp"/>
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <!--    <TextView-->
     <!--        android:id="@+id/resolution_textView"-->
     <!--        android:layout_width="match_parent"-->
@@ -32,7 +32,7 @@
     <!--        android:textSize="40sp"-->
     <!--         />-->
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintlayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -122,5 +122,5 @@
             app:layout_constraintVertical_bias="0.539">
 
         </RadioButton>
-    </android.support.constraint.ConstraintLayout>
-</android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
