--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="cl_default">#424242</color>
     <color name="cl_error">#ffffff</color>
 
+    <color name="black_overlay">#66000000</color>
 </resources>
