--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="Video_Model">
-        <item>原始视频</item>
-        <item>融合视频</item>
+        <item>前摄像</item>
+        <item>后摄像</item>
+        <item>左摄像</item>
+        <item>右摄像</item>
+        <item>上帝视角</item>
     </string-array>
 
     <declare-styleable name="ButtonBarContainerTheme">
