--- a/jjdxm-ijkplayer/src/main/res/layout/simple_player_controlbar.xml
+++ b/jjdxm-ijkplayer/src/main/res/layout/simple_player_controlbar.xml
@@ -153,6 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:src="@drawable/simple_player_icon_fullscreen_stretch" />
+        android:src="@drawable/simple_player_icon_fullscreen_stretch"
+        android:visibility="invisible"/>
 
 </LinearLayout>
