--- a/app/src/main/res/layout/activity_remote_controlinitial.xml
+++ b/app/src/main/res/layout/activity_remote_controlinitial.xml
@@ -45,9 +45,10 @@
         layout="@layout/remove_bottombar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
