--- a/app/src/main/res/layout/remove_topbar.xml
+++ b/app/src/main/res/layout/remove_topbar.xml
@@ -28,7 +28,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="28dp"
-        android:background="@mipmap/speed_bg"
+        android:background="@drawable/speed_bg"
         android:gravity="center"
         android:text="@string/speed"
         app:layout_constraintEnd_toEndOf="parent"
