--- a/app/src/main/res/layout/activity_autopark.xml
+++ b/app/src/main/res/layout/activity_autopark.xml
@@ -4,13 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".autopark.AutoPark">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="自动出泊车"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.03" />
 
     <ImageView
         android:id="@+id/basicImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/vehicle_basic"
+        android:src="@drawable/vehicle_basic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -18,28 +30,33 @@
         app:layout_constraintVertical_bias="0.382" />
 
     <ImageButton
-        android:id="@+id/autoParking"
-        android:layout_width="234px"
-        android:layout_height="300px"
+        android:id="@+id/Out"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/basicImageView"
-        android:layout_marginTop="50dp"
-        android:src="@mipmap/auto_parking"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintLeft_toLeftOf="@id/basicImageView"
-        >
+        android:src="@drawable/out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.209"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.921">
+
     </ImageButton>
 
     <ImageButton
-        android:id="@+id/remote_control"
-        android:layout_width="234px"
-        android:layout_height="300px"
+        android:id="@+id/In"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:scaleType="fitXY"
-        app:layout_constraintRight_toRightOf="@+id/basicImageView"
-        app:layout_constraintTop_toTopOf="@id/autoParking"
-        android:src="@mipmap/remote_control_parking"
-        tools:ignore="MissingConstraints"
-        >
+        android:src="@drawable/park"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.835"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.919">
+
     </ImageButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
