--- a/app/src/main/res/layout/activity_remote_controlinitial.xml
+++ b/app/src/main/res/layout/activity_remote_controlinitial.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".RemoteControl">
+    tools:context=".remotecontrol.RemoteControl">
 
 
     <include
@@ -33,7 +33,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/vehicle_basic"
+        android:src="@drawable/vehicle_basic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
